Fix alignment of the call to action section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,8 +188,11 @@ header{
 
 .call-to-action-container{
     display: flex;
+    align-items: center;
     border: 2px solid blue;
     border-radius: 20px;
     background-color: blue;
 }
+
+
 
